[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.7",
    "django-bootstrap5>=26.2",
    "django-environ>=0.14.0",
    "gunicorn>=26.0.0",
    "psycopg[binary]>=3.3.4",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.22",
]

[tool.ruff]
exclude = [
    "**/migrations/*",
    "task_manager/settings.py",
]
